[gd_scene load_steps=28 format=2]

[ext_resource path="res://minigames/min_tripleclap/min_tripleclap.gd" type="Script" id=1]
[ext_resource path="res://minigames/min_tripleclap/images/bg.png" type="Texture" id=2]
[ext_resource path="res://minigames/min_tripleclap/images/knit_0003.png" type="Texture" id=3]
[ext_resource path="res://minigames/min_tripleclap/images/knit_0001.png" type="Texture" id=4]
[ext_resource path="res://minigames/min_tripleclap/images/knitfail_0001.png" type="Texture" id=5]
[ext_resource path="res://minigames/min_tripleclap/images/knit_0002.png" type="Texture" id=6]
[ext_resource path="res://minigames/min_tripleclap/images/knitfail_0002.png" type="Texture" id=7]
[ext_resource path="res://minigames/min_tripleclap/images/knitfail_0000.png" type="Texture" id=8]
[ext_resource path="res://minigames/min_tripleclap/images/knit_0000.png" type="Texture" id=9]
[ext_resource path="res://minigames/min_tripleclap/images/knitfail_0003.png" type="Texture" id=10]
[ext_resource path="res://minigames/min_tripleclap/images/knitshowfailothers.png" type="Texture" id=11]
[ext_resource path="res://minigames/min_tripleclap/images/knitshow.png" type="Texture" id=12]
[ext_resource path="res://minigames/min_tripleclap/images/knitshowfail.png" type="Texture" id=13]
[ext_resource path="res://minigames/min_tripleclap/sfx/snd_knit.wav" type="AudioStream" id=14]
[ext_resource path="res://minigames/min_tripleclap/sfx/snd_jump_knit.wav" type="AudioStream" id=15]
[ext_resource path="res://minigames/min_tripleclap/images/You.png" type="Texture" id=16]
[ext_resource path="res://minigames/min_tripleclap/sfx/snd_wrong.wav" type="AudioStream" id=17]
[ext_resource path="res://minigames/min_tripleclap/sfx/snd_cowbell.wav" type="AudioStream" id=18]
[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "show",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "show_fail",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": false,
"name": "knit_fail",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": false,
"name": "knit",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.201711, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.201711, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.201711, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[node name="min_tripleclap" type="Node2D"]
script = ExtResource( 1 )
loaded_sfxs = {
"cowbell": ExtResource( 18 ),
"jump": ExtResource( 15 ),
"jump_fail": ExtResource( 17 ),
"knit": ExtResource( 14 )
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 605.0
color = Color( 0.905882, 0.905882, 0.905882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Sprite" parent="Background"]
texture = ExtResource( 2 )
centered = false

[node name="cats" type="Node2D" parent="."]
position = Vector2( 286, 417 )

[node name="cat1" type="AnimatedSprite" parent="cats"]
frames = SubResource( 1 )

[node name="jump" type="AnimationPlayer" parent="cats/cat1"]
anims/RESET = SubResource( 2 )
anims/jump = SubResource( 3 )

[node name="cat2" type="AnimatedSprite" parent="cats"]
frames = SubResource( 1 )
offset = Vector2( 250, 0 )

[node name="jump" type="AnimationPlayer" parent="cats/cat2"]
anims/RESET = SubResource( 4 )
anims/jump = SubResource( 5 )

[node name="cat3" type="AnimatedSprite" parent="cats"]
frames = SubResource( 1 )
offset = Vector2( 500, 0 )

[node name="You" type="Sprite" parent="cats/cat3"]
position = Vector2( 500, 150 )
scale = Vector2( 0.580882, 0.580882 )
texture = ExtResource( 16 )

[node name="jump" type="AnimationPlayer" parent="cats/cat3"]
anims/RESET = SubResource( 6 )
anims/jump = SubResource( 7 )

[node name="focus" type="ColorRect" parent="."]
visible = false
margin_right = 1030.0
margin_bottom = 621.0
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="focus"]
margin_right = 1019.0
margin_bottom = 198.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Show!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
